force-app/main/default/objects/clariti__CashTray__c/clariti__CashTray__c.object-meta.xml
<CustomObject>
    <label>Cash Tray</label>
    <nameField>
        <label>Cash Tray Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Trays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>