force-app/main/default/objects/clariti__CashTray__c/fields/clariti__CheckBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__CheckBalance__c</fullName>
    <label>Check Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>