force-app/main/default/objects/clariti__CashTray__c/fields/clariti__Float__c.field-meta.xml
<CustomField>
    <fullName>clariti__Float__c</fullName>
    <defaultValue>IF(NOT(ISBLANK($CustomMetadata.clariti__FinancialsDefaultValueSettings__mdt.clariti__CashTrayDefaultFloat.clariti__Value__c)),
        VALUE($CustomMetadata.clariti__FinancialsDefaultValueSettings__mdt.clariti__CashTrayDefaultFloat.clariti__Value__c), 
        NULL)</defaultValue>
    <label>Float</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>