force-app/main/default/objects/clariti__CashTray__c/fields/clariti__ThresholdBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__ThresholdBalance__c</fullName>
    <defaultValue>IF(NOT(ISBLANK($CustomMetadata.clariti__FinancialsDefaultValueSettings__mdt.clariti__CashTrayDefaultThresholdBalance.clariti__Value__c)),
VALUE($CustomMetadata.clariti__FinancialsDefaultValueSettings__mdt.clariti__CashTrayDefaultThresholdBalance.clariti__Value__c), 
0)</defaultValue>
    <description>When the Cash Tray reaches the threshold balance, user will be notified to initiate a Cash Deposit.</description>
    <label>Threshold Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>