force-app/main/default/objects/clariti__CashTray__c/fields/clariti__TotalBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalBalance__c</fullName>
    <formula>clariti__CheckBalance__c +  clariti__CashBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>