force-app/main/default/objects/clariti__CashTray__c/validationRules/clariti__FloatCannotBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__FloatCannotBeEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(clariti__Float__c)</errorConditionFormula>
    <errorDisplayField>clariti__Float__c</errorDisplayField>
    <errorMessage>The float amount cannot be empty. Please enter a value for the float amount.</errorMessage>
</ValidationRule>