force-app/main/default/objects/clariti__CashTray__c/validationRules/clariti__UserDoesNotHaveModThresholdBalancePerm.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__UserDoesNotHaveModThresholdBalancePerm</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(clariti__ThresholdBalance__c) &amp;&amp; NOT($Permission.clariti__ChangeThresholdBalance)</errorConditionFormula>
    <errorDisplayField>clariti__ThresholdBalance__c</errorDisplayField>
    <errorMessage>You do not have permission to edit the Cash Tray Threshold Balance.</errorMessage>
</ValidationRule>